[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Theme/kenneyUI-yellow.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Icons/cross.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/ArialRound/ArialRound-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Utilities/ChangeSceneButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/ChooseMinigame.gd" type="Script" id=5]
[ext_resource path="res://Assets/Theme/BigButtonFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Utilities/IdButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/JetBrainsMono/JetBrainsMono-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Icons/gamepadHalf.png" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/informationHalf.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 23
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 36
use_filter = true
font_data = ExtResource( 3 )

[node name="ChooseMinigame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
idButton = ExtResource( 7 )
buttonFont = ExtResource( 6 )
infoIcon = ExtResource( 10 )
controlIcon = ExtResource( 9 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -597.0
margin_top = -450.0
margin_right = 592.0
margin_bottom = 454.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1174.0
margin_bottom = 889.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="ScrollContainer" parent="Panel/MarginContainer/HBoxContainer"]
margin_right = 321.0
margin_bottom = 874.0
size_flags_horizontal = 3
size_flags_vertical = 9
size_flags_stretch_ratio = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/HBoxContainer/Buttons"]
margin_right = 321.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="ButtonContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Buttons/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 306.0
margin_bottom = 15.0

[node name="TestButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Buttons/MarginContainer/ButtonContainer"]
visible = false
margin_right = 291.0
margin_bottom = 67.251
custom_fonts/font = ExtResource( 6 )
text = "Test"

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 340.0
margin_bottom = 874.0

[node name="Container" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 355.0
margin_right = 1159.0
margin_bottom = 874.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Container"]
margin_right = 804.0
margin_bottom = 787.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/Container/VBoxContainer"]
margin_right = 804.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "There was an error?"
align = 1

[node name="ImageRect" type="TextureRect" parent="Panel/MarginContainer/HBoxContainer/Container/VBoxContainer"]
margin_top = 77.0
margin_right = 804.0
margin_bottom = 377.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
expand = true
stretch_mode = 6

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/HBoxContainer/Container/VBoxContainer"]
margin_top = 397.0
margin_right = 804.0
margin_bottom = 787.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.94
tab_align = 0

[node name="Description" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/Container/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 47.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Hello world!
Wait, you aren't supposed to see this! How did you do it?"
text = "Hello world!
Wait, you aren't supposed to see this! How did you do it?"

[node name="Controls" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/Container/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 47.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Hello world!
This is the description of the game!"
text = "Hello world!
This is the description of the game!"

[node name="PlayButton" parent="Panel/MarginContainer/HBoxContainer/Container" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_top = 807.0
margin_right = 462.0
margin_bottom = 874.251
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "Play"

[node name="CloseButton" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.3241
margin_bottom = 74.251
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="meta_clicked" from="Panel/MarginContainer/HBoxContainer/Container/VBoxContainer/TabContainer/Description" to="." method="_on_Description_meta_clicked"]
[connection signal="meta_clicked" from="Panel/MarginContainer/HBoxContainer/Container/VBoxContainer/TabContainer/Controls" to="." method="_on_Description_meta_clicked"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_CloseButton_pressed"]
